# auto_remove_hls

./: .gitignore  Cargo.toml  README.md  build.rs  create_test_files.sh  deploy.sh  filelist.txt
Docker/: .env  Dockerfile  docker-compose.yml  init.sh
python/: config.py  connection.py  database.ini  stmt.py
src/: main.rs
src/c_code/: CMakeLists.txt  helper.cc  helper.h  test.cc
